// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar shell snapshots > renders the collapsed rail after the crossfade settles, in place 1`] = `
<div
  class="anchor"
  data-slot="sidebar"
>
  <div
    class="root collapsed railIn quietBars"
    style=""
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="Open sidebar"
        class="root sidebar iconButton toggle"
        data-tooltip-trigger="--tooltip-_r_4_"
        type="button"
      >
        <span
          aria-hidden="true"
          class="railMark"
        >
          <div
            class="anchor"
            data-slot="sidebar.brand.mark"
          >
            <svg
              aria-hidden="true"
              data-content="8019033a"
              fill="none"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            />
          </div>
        </span>
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      data-tooltip-trigger="--tooltip-_r_5_"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="18"
        viewBox="0 0 16 16"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
    <div
      class="regionArea"
    >
      <div
        class="anchor"
        data-slot="sidebar.workspaces"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          class="anchor"
          data-slot="sidebar.footer.action"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          class="anchor"
          data-slot="sidebar.settings"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column (wordmark, capsule, empty holes) 1`] = `
<div
  class="anchor"
  data-slot="sidebar"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="New session"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          class="brandIdentity"
        >
          <span
            class="brandMark"
          >
            <div
              class="anchor"
              data-slot="sidebar.brand.mark"
            >
              <svg
                aria-hidden="true"
                data-content="8019033a"
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              />
            </div>
          </span>
          <span
            class="brandName"
          >
            <div
              class="anchor"
              data-slot="sidebar.brand.name"
            >
              <span
                class="localBuildBrand"
              >
                <span
                  class="localBuildTitle"
                >
                  DeepMeow
                </span>
                <span
                  class="buildVersion"
                >
                  1.2.3-rc.4-abc1234
                </span>
              </span>
            </div>
          </span>
        </span>
      </button>
      <button
        aria-label="Collapse sidebar"
        class="root sidebar iconButton toggle"
        data-tooltip-trigger="--tooltip-_r_2_"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      data-tooltip-trigger="--tooltip-_r_3_"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="14"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        New Session
      </span>
    </button>
    <div
      class="regionArea"
    >
      <div
        class="anchor"
        data-slot="sidebar.workspaces"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          class="anchor"
          data-slot="sidebar.footer.action"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          class="anchor"
          data-slot="sidebar.settings"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column in the default locale (zh, no setLocale) 1`] = `
<div
  class="anchor"
  data-slot="sidebar"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="新建会话"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          class="brandIdentity"
        >
          <span
            class="brandMark"
          >
            <div
              class="anchor"
              data-slot="sidebar.brand.mark"
            >
              <svg
                aria-hidden="true"
                data-content="8019033a"
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              />
            </div>
          </span>
          <span
            class="brandName"
          >
            <div
              class="anchor"
              data-slot="sidebar.brand.name"
            >
              <span
                class="localBuildBrand"
              >
                <span
                  class="localBuildTitle"
                >
                  DeepMeow
                </span>
                <span
                  class="buildVersion"
                >
                  1.2.3-rc.4-abc1234
                </span>
              </span>
            </div>
          </span>
        </span>
      </button>
      <button
        aria-label="收起侧边栏"
        class="root sidebar iconButton toggle"
        data-tooltip-trigger="--tooltip-_r_0_"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="新建会话"
      class="newSession"
      data-tooltip-trigger="--tooltip-_r_1_"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="14"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        新会话
      </span>
    </button>
    <div
      class="regionArea"
    >
      <div
        class="anchor"
        data-slot="sidebar.workspaces"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          class="anchor"
          data-slot="sidebar.footer.action"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          class="anchor"
          data-slot="sidebar.settings"
        />
      </div>
    </div>
  </div>
</div>
`;
